--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <link rel="icon" href="../public/favicon.ico" type="image/x-icon">
     <title>ANDWACKY</title>
   </head>
   <body>
